name:                             pansite
version:                          0.1.0.0
synopsis:                         Pansite: a simple web site management tool
description:                      Please see README.md
homepage:                         https://github.com/rcook/pansite#readme
license:                          MIT
license-file:                     LICENSE
author:                           Richard Cook
maintainer:                       rcook@rcook.org
copyright:                        2017 Richard Cook
category:                         Web
build-type:                       Simple
extra-source-files:               README.md
cabal-version:                    >= 1.10

source-repository head
  type:                           git
  location:                       https://github.com/rcook/pansite.git

library
  default-language:               Haskell2010
  ghc-options:                    -Werror -fwarn-incomplete-patterns -fwarn-unused-imports
  hs-source-dirs:                 src
  exposed-modules:                Pansite
  other-modules:                  Pansite.Config
                                , Pansite.Config.Funcs
                                , Pansite.Config.Types
  build-depends:                  aeson
                                , base
                                , bytestring
                                , data-default
                                , split
                                , text
                                , unordered-containers
                                , vector
                                , yaml

executable pansite-app
  default-language:               Haskell2010
  ghc-options:                    -threaded -rtsopts -with-rtsopts=-N -Werror -fwarn-incomplete-patterns -fwarn-unused-imports
  hs-source-dirs:                 app
  main-is:                        Main.hs
  other-modules:                  PansiteApp.App
                                , PansiteApp.Build
                                , PansiteApp.CommandLine
                                , PansiteApp.ConfigInfo
                                , PansiteApp.CopyTool
                                , PansiteApp.PandocTool
                                , PansiteApp.Util
  build-depends:                  aeson
                                , base
                                , blaze-html
                                , bytestring
                                , data-default
                                , directory
                                , filepath
                                , http-types
                                , optparse-applicative
                                , pandoc
                                , pandoc-types
                                , pansite
                                , shake
                                , text
                                , time
                                , unordered-containers
                                , wai
                                , wai-logger
                                , warp

test-suite pansite-doctest
  type:                           exitcode-stdio-1.0
  default-language:               Haskell2010
  ghc-options:                    -threaded -rtsopts -with-rtsopts=-N -Werror -fwarn-incomplete-patterns
  hs-source-dirs:                 doctest
  main-is:                        Main.hs
  build-depends:                  Glob
                                , base
                                , doctest

test-suite pansite-spec
  type:                           exitcode-stdio-1.0
  default-language:               Haskell2010
  ghc-options:                    -threaded -rtsopts -with-rtsopts=-N -Werror -fwarn-incomplete-patterns -fwarn-unused-imports
  hs-source-dirs:                 spec
  main-is:                        Spec.hs
  build-depends:                  base
                                , hspec
                                , pansite
